--- a/config/application.yml
+++ b/config/application.yml
@@ -9,3 +9,5 @@
 # production:
 #   stripe_api_key: sk_live_EeHnL644i6zo4Iyq4v1KdV9H
 #   stripe_publishable_key: pk_live_9lcthxpSIHbGwmdO941O1XVU
+
+MOVIEDB_API_KEY: 274035961d7ab080ca589b93004681f0
