--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 /coverage
+# Ignore application configuration
+/config/application.yml
