--- a/spec/fixtures/vcr_cassettes/movie_id_238.yml
+++ b/spec/fixtures/vcr_cassettes/movie_id_238.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.themoviedb.org/3/movie/238?api_key=a2180673661db74377cb3704b314bd7a&language=en-US
+    uri: https://api.themoviedb.org/3/movie/238?api_key=<MoviesDB_API_KEY>&language=en-US
     body:
       encoding: US-ASCII
       string: ''
@@ -25,7 +25,7 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Wed, 22 Mar 2023 19:36:42 GMT
+      - Thu, 23 Mar 2023 04:01:55 GMT
       Server:
       - openresty
       Cache-Control:
@@ -35,26 +35,26 @@ http_interactions:
       X-Memc-Key:
       - 9d48db5c244b9c3e3d162ef155211175
       X-Memc-Age:
-      - '14917'
+      - '11675'
       X-Memc-Expires:
-      - '2697'
+      - '5652'
       Etag:
-      - W/"87041d787681ef64090586a088ce7ce8"
+      - W/"0505e82d5c66cd9734c4a41669a37ef9"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 be4e0cf1c7c91adcc8d487fc4b56df48.cloudfront.net (CloudFront)
+      - 1.1 9831ceabf0d6ac3d7dc4dc842e62635c.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
       - QRO51-P1
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - vXU_yQevz6aUSG8_rZKA7YRtEfTsp01tdrvCTOdL04qroj3CPU2AzA==
+      - PTNJRyPoH1p3RisnSsW_2gEWhtNI4_Z-0v0Np5DpzDBf_vPXB91uNg==
       Age:
-      - '6876'
+      - '291'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/tmU7GeKVybMWFButWEGl2M4GeiP.jpg","belongs_to_collection":{"id":230,"name":"The
@@ -63,9 +63,9 @@ http_interactions:
         fictional Italian-American Corleone crime family. When organized crime family
         patriarch, Vito Corleone barely survives an attempt on his life, his youngest
         son, Michael steps in to take care of the would-be killers, launching a campaign
-        of bloody revenge.","popularity":117.567,"poster_path":"/3bhkrj58Vtu7enYsRolD1fZdja1.jpg","production_companies":[{"id":4,"logo_path":"/gz66EfNoYPqHTYI4q9UEN4CbHRc.png","name":"Paramount","origin_country":"US"},{"id":10211,"logo_path":null,"name":"Alfran
+        of bloody revenge.","popularity":129.885,"poster_path":"/3bhkrj58Vtu7enYsRolD1fZdja1.jpg","production_companies":[{"id":4,"logo_path":"/gz66EfNoYPqHTYI4q9UEN4CbHRc.png","name":"Paramount","origin_country":"US"},{"id":10211,"logo_path":null,"name":"Alfran
         Productions","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1972-03-14","revenue":245066411,"runtime":175,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"},{"english_name":"Italian","iso_639_1":"it","name":"Italiano"},{"english_name":"Latin","iso_639_1":"la","name":"Latin"}],"status":"Released","tagline":"An
-        offer you can''t refuse.","title":"The Godfather","video":false,"vote_average":8.712,"vote_count":17634}'
-  recorded_at: Wed, 22 Mar 2023 21:31:17 GMT
+        offer you can''t refuse.","title":"The Godfather","video":false,"vote_average":8.7,"vote_count":17637}'
+  recorded_at: Thu, 23 Mar 2023 04:06:46 GMT
 recorded_with: VCR 6.1.0
