--- a/spec/fixtures/vcr_cassettes/Discover_Movies_Page/Top_20_Movies/displays_button_to_go_back_to_the_discover_page.yml
+++ b/spec/fixtures/vcr_cassettes/Discover_Movies_Page/Top_20_Movies/displays_button_to_go_back_to_the_discover_page.yml
@@ -38,13 +38,15 @@ http_interactions:
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 96971091469e558c8f8e351ccf0d7212.cloudfront.net (CloudFront)
+      - 1.1 d4fb3448d1a8d3229dcf0a89f4bbe7e8.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
       - DEN52-P2
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - Fp5TXdLzwbht4QPwPP2PiNQVxMXZ-5L2imMVE57oer4JrJE384F6zA==
+      - ZGQrvWH3AVVsl2GbLe0QhqKLElRu6MPBa4VF2D-MrYNZom-wLGC6NA==
+      Age:
+      - '5544'
     body:
       encoding: UTF-8
       string: '{"page":1,"results":[{"adult":false,"backdrop_path":"/tmU7GeKVybMWFButWEGl2M4GeiP.jpg","genre_ids":[18,80],"id":238,"original_language":"en","original_title":"The
@@ -152,5 +154,5 @@ http_interactions:
         true story of Henry Hill, a half-Irish, half-Sicilian Brooklyn kid who is
         adopted by neighbourhood gangsters at an early age and climbs the ranks of
         a Mafia family under the guidance of Jimmy Conway.","popularity":43.625,"poster_path":"/aKuFiU82s5ISJpGZp7YkIr3kCUd.jpg","release_date":"1990-09-12","title":"GoodFellas","video":false,"vote_average":8.5,"vote_count":11096}],"total_pages":546,"total_results":10912}'
-  recorded_at: Thu, 23 Mar 2023 17:40:05 GMT
+  recorded_at: Thu, 23 Mar 2023 19:12:30 GMT
 recorded_with: VCR 6.1.0
