--- a/spec/fixtures/vcr_cassettes/Discover_Movies_Page/Top_20_Movies/where_a_maximum_of_20_results_are_displayed_with_their_respective_titles_and_vote_average.yml
+++ b/spec/fixtures/vcr_cassettes/Discover_Movies_Page/Top_20_Movies/where_a_maximum_of_20_results_are_displayed_with_their_respective_titles_and_vote_average.yml
@@ -38,13 +38,15 @@ http_interactions:
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 d9fe97589e952f97209f7a422c89d876.cloudfront.net (CloudFront)
+      - 1.1 a7c0ba01db75946f7df3f7eaf69984b6.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
       - DEN52-P2
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - Y4wAcRPaL1in62vGDt54RFAGVLReOfppcAx0oNBlcP159NEg-LL2BQ==
+      - 0t6JBi48PljH-SPlXsQ34Ut3jEbJ38fXXlKP8ukiUwKzK1LtHLD9Kw==
+      Age:
+      - '5544'
     body:
       encoding: UTF-8
       string: '{"page":1,"results":[{"adult":false,"backdrop_path":"/tmU7GeKVybMWFButWEGl2M4GeiP.jpg","genre_ids":[18,80],"id":238,"original_language":"en","original_title":"The
@@ -152,5 +154,5 @@ http_interactions:
         true story of Henry Hill, a half-Irish, half-Sicilian Brooklyn kid who is
         adopted by neighbourhood gangsters at an early age and climbs the ranks of
         a Mafia family under the guidance of Jimmy Conway.","popularity":43.625,"poster_path":"/aKuFiU82s5ISJpGZp7YkIr3kCUd.jpg","release_date":"1990-09-12","title":"GoodFellas","video":false,"vote_average":8.5,"vote_count":11096}],"total_pages":546,"total_results":10912}'
-  recorded_at: Thu, 23 Mar 2023 17:40:05 GMT
+  recorded_at: Thu, 23 Mar 2023 19:12:30 GMT
 recorded_with: VCR 6.1.0
