Add facade methods to handle combining calls for the cast and review data
Co-authored-by: Caleb Thomas <104170346+cjthomas00@users.noreply.github.com>

--- a/spec/fixtures/vcr_cassettes/godfather_movie.yml
+++ b/spec/fixtures/vcr_cassettes/godfather_movie.yml
@@ -44,15 +44,17 @@ http_interactions:
       - Accept-Encoding
       - Origin
       X-Cache:
-      - Miss from cloudfront
+      - Hit from cloudfront
       Via:
-      - 1.1 5d351175d5947d478733fbecdab866f6.cloudfront.net (CloudFront)
+      - 1.1 88bce767af5e31f726ade38ea5253bd4.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
       - DEN52-P2
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - BDbVo5AsGb24OaGvRWxhQedfMjl3zrzu8C3Bz1d30X7sUzU9qm-UZA==
+      - _rc-IASuT73kigFbbuQf--krkCxi3saVru1hKMK3iUErpXWl4WNsSQ==
+      Age:
+      - '5057'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/tmU7GeKVybMWFButWEGl2M4GeiP.jpg","belongs_to_collection":{"id":230,"name":"The
@@ -65,5 +67,5 @@ http_interactions:
         Productions","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1972-03-14","revenue":245066411,"runtime":175,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"},{"english_name":"Italian","iso_639_1":"it","name":"Italiano"},{"english_name":"Latin","iso_639_1":"la","name":"Latin"}],"status":"Released","tagline":"An
         offer you can''t refuse.","title":"The Godfather","video":false,"vote_average":8.712,"vote_count":17641}'
-  recorded_at: Thu, 23 Mar 2023 22:41:17 GMT
+  recorded_at: Fri, 24 Mar 2023 00:05:33 GMT
 recorded_with: VCR 6.1.0
