--- a/spec/fixtures/vcr_cassettes/godfather_movie.yml
+++ b/spec/fixtures/vcr_cassettes/godfather_movie.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.themoviedb.org/3/movie/238?api_key=86f361cca6ee286354949e22ca339323&language=en-US
+    uri: https://api.themoviedb.org/3/movie/238?api_key=ebf46d9ab88b772502128d76538d0071&language=en-US
     body:
       encoding: US-ASCII
       string: ''
@@ -25,7 +25,7 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Thu, 23 Mar 2023 22:41:17 GMT
+      - Fri, 24 Mar 2023 02:49:04 GMT
       Server:
       - openresty
       Cache-Control:
@@ -35,26 +35,26 @@ http_interactions:
       X-Memc-Key:
       - 9d48db5c244b9c3e3d162ef155211175
       X-Memc-Age:
-      - '12185'
+      - '11375'
       X-Memc-Expires:
-      - '4384'
+      - '4187'
       Etag:
-      - W/"c362a76d2a480fd9f647db98d36e5445"
+      - W/"70df7bcf14241d2caee5fb1ec38337b3"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 88bce767af5e31f726ade38ea5253bd4.cloudfront.net (CloudFront)
+      - 1.1 075cbfecdb7a7b3711dffaa6c5a5c160.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - DEN52-P2
+      - ORD53-C2
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - _rc-IASuT73kigFbbuQf--krkCxi3saVru1hKMK3iUErpXWl4WNsSQ==
+      - nzM6E8pr2KzO340KD-P1nM9SCwNSgJmLuy8j-WwaVzubnipbdKYukA==
       Age:
-      - '5057'
+      - '1064'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/tmU7GeKVybMWFButWEGl2M4GeiP.jpg","belongs_to_collection":{"id":230,"name":"The
@@ -66,6 +66,6 @@ http_interactions:
         of bloody revenge.","popularity":129.885,"poster_path":"/3bhkrj58Vtu7enYsRolD1fZdja1.jpg","production_companies":[{"id":4,"logo_path":"/gz66EfNoYPqHTYI4q9UEN4CbHRc.png","name":"Paramount","origin_country":"US"},{"id":10211,"logo_path":null,"name":"Alfran
         Productions","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1972-03-14","revenue":245066411,"runtime":175,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"},{"english_name":"Italian","iso_639_1":"it","name":"Italiano"},{"english_name":"Latin","iso_639_1":"la","name":"Latin"}],"status":"Released","tagline":"An
-        offer you can''t refuse.","title":"The Godfather","video":false,"vote_average":8.712,"vote_count":17641}'
-  recorded_at: Fri, 24 Mar 2023 00:05:33 GMT
+        offer you can''t refuse.","title":"The Godfather","video":false,"vote_average":8.712,"vote_count":17642}'
+  recorded_at: Fri, 24 Mar 2023 03:06:48 GMT
 recorded_with: VCR 6.1.0
