Refactor facades to use poros for cast and reviews. update view to match

--- a/spec/fixtures/vcr_cassettes/godfather_movie.yml
+++ b/spec/fixtures/vcr_cassettes/godfather_movie.yml
@@ -44,15 +44,17 @@ http_interactions:
       - Accept-Encoding
       - Origin
       X-Cache:
-      - Miss from cloudfront
+      - Hit from cloudfront
       Via:
-      - 1.1 d09fd0ac0a8733df98f134da74eec098.cloudfront.net (CloudFront)
+      - 1.1 d4fb3448d1a8d3229dcf0a89f4bbe7e8.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
       - DEN52-P2
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - uIYPZdQTlE7sNr5rcvkUToDJBVGM7rNubCUY6KmQBMGmg8yW1lrPDg==
+      - y9lrxl7WePE0D0AhxUL7tc7_4Vuk2OTS6GM6c3_5FwahCl4XgX-vKg==
+      Age:
+      - '1725'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/tmU7GeKVybMWFButWEGl2M4GeiP.jpg","belongs_to_collection":{"id":230,"name":"The
@@ -65,5 +67,5 @@ http_interactions:
         Productions","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1972-03-14","revenue":245066411,"runtime":175,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"},{"english_name":"Italian","iso_639_1":"it","name":"Italiano"},{"english_name":"Latin","iso_639_1":"la","name":"Latin"}],"status":"Released","tagline":"An
         offer you can''t refuse.","title":"The Godfather","video":false,"vote_average":8.712,"vote_count":17642}'
-  recorded_at: Fri, 24 Mar 2023 12:37:01 GMT
+  recorded_at: Fri, 24 Mar 2023 13:05:46 GMT
 recorded_with: VCR 6.1.0
