--- a/spec/fixtures/vcr_cassettes/returns_a_json_object_containing_a_movies_reviews.yml
+++ b/spec/fixtures/vcr_cassettes/returns_a_json_object_containing_a_movies_reviews.yml
@@ -26,35 +26,35 @@ http_interactions:
       - chunked
       Connection:
       - keep-alive
+      Date:
+      - Mon, 03 Apr 2023 17:25:38 GMT
       Server:
       - openresty
+      Cache-Control:
+      - public, max-age=22667
       X-Memc:
       - HIT
       X-Memc-Key:
       - f393aa4aefe6bf5c800f6c8dd66ef2f2
       X-Memc-Age:
-      - '7759'
+      - '10848'
       X-Memc-Expires:
-      - '7460'
-      Date:
-      - Fri, 24 Mar 2023 21:45:16 GMT
-      Cache-Control:
-      - public, max-age=28800
+      - '3721'
       Etag:
       - W/"e6d6f7895416bb7a7beb10330bc76355"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
-      - RefreshHit from cloudfront
+      - Miss from cloudfront
       Via:
-      - 1.1 16d72e0791ff01fc4470d27fc024527a.cloudfront.net (CloudFront)
+      - 1.1 badefad2d1fb92bb4620df1ce11d8c92.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
       - DEN52-P2
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - EoML_PMNW4mB9mD8IMno21bxDVk1VbkBJpm_1hqiU2_g0Wq1UOciNw==
+      - LXUiwuBpQW14XlKm1EWrx3JqaDypfyFHZfPTS11WmVFmOAqh7hvaZw==
     body:
       encoding: UTF-8
       string: '{"id":238,"page":1,"results":[{"author":"futuretv","author_details":{"name":"","username":"futuretv","avatar_path":"/https://www.gravatar.com/avatar/f44259356bf6110070ed799323d539d6.jpg","rating":10.0},"content":"The
@@ -101,5 +101,5 @@ http_interactions:
         Coppola, about a Mob family and their drama, the story telling is perfect,
         the acting good, sometimes a little over the top in the case of Thalia Shire
         (the sister of the director)\r\n\r\nThe 70''s were the best years for Hollywood.","created_at":"2022-07-18T23:18:07.748Z","id":"62d5ea2fe93e95095cbddefe","updated_at":"2022-07-26T14:21:07.910Z","url":"https://www.themoviedb.org/review/62d5ea2fe93e95095cbddefe"}],"total_pages":1,"total_results":2}'
-  recorded_at: Fri, 24 Mar 2023 21:45:15 GMT
+  recorded_at: Mon, 03 Apr 2023 17:25:37 GMT
 recorded_with: VCR 6.1.0
