--- a/spec/fixtures/vcr_cassettes/MovieService/class_methods/details_call/returns_the_movie_details.yml
+++ b/spec/fixtures/vcr_cassettes/MovieService/class_methods/details_call/returns_the_movie_details.yml
@@ -25,36 +25,36 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Fri, 24 Mar 2023 15:43:40 GMT
+      - Tue, 04 Apr 2023 15:09:59 GMT
       Server:
       - openresty
       Cache-Control:
-      - public, max-age=28800
+      - public, max-age=23950
       X-Memc:
       - HIT
       X-Memc-Key:
       - 9d48db5c244b9c3e3d162ef155211175
       X-Memc-Age:
-      - '8797'
+      - '18404'
       X-Memc-Expires:
-      - '6577'
+      - '9076'
       Etag:
-      - W/"4f6e4b7e636a34becfd028e3d0ab8cc5"
+      - W/"0a42cb4cae1497ee857309404e1eaaa3"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 d09fd0ac0a8733df98f134da74eec098.cloudfront.net (CloudFront)
+      - 1.1 1d4a0c5c1e2a08b50c7d9e658a3f4fec.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - DEN52-P2
+      - LAX53-P4
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - JLbWk_LTZ2-uziKZk9hhYbxZ7NQPXmO5wEddUkGpoUNZvvza3f5I9w==
+      - VaMuLJROI54DXIvBqnDWeFCkYqeq8TmctgBnp7mPtlubLndAqCoppg==
       Age:
-      - '20408'
+      - '670'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/tmU7GeKVybMWFButWEGl2M4GeiP.jpg","belongs_to_collection":{"id":230,"name":"The
@@ -63,9 +63,9 @@ http_interactions:
         fictional Italian-American Corleone crime family. When organized crime family
         patriarch, Vito Corleone barely survives an attempt on his life, his youngest
         son, Michael steps in to take care of the would-be killers, launching a campaign
-        of bloody revenge.","popularity":120.733,"poster_path":"/3bhkrj58Vtu7enYsRolD1fZdja1.jpg","production_companies":[{"id":4,"logo_path":"/gz66EfNoYPqHTYI4q9UEN4CbHRc.png","name":"Paramount","origin_country":"US"},{"id":10211,"logo_path":null,"name":"Alfran
+        of bloody revenge.","popularity":112.392,"poster_path":"/3bhkrj58Vtu7enYsRolD1fZdja1.jpg","production_companies":[{"id":4,"logo_path":"/gz66EfNoYPqHTYI4q9UEN4CbHRc.png","name":"Paramount","origin_country":"US"},{"id":10211,"logo_path":null,"name":"Alfran
         Productions","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1972-03-14","revenue":245066411,"runtime":175,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"},{"english_name":"Italian","iso_639_1":"it","name":"Italiano"},{"english_name":"Latin","iso_639_1":"la","name":"Latin"}],"status":"Released","tagline":"An
-        offer you can''t refuse.","title":"The Godfather","video":false,"vote_average":8.712,"vote_count":17643}'
-  recorded_at: Fri, 24 Mar 2023 21:23:48 GMT
+        offer you can''t refuse.","title":"The Godfather","video":false,"vote_average":8.711,"vote_count":17682}'
+  recorded_at: Tue, 04 Apr 2023 15:21:09 GMT
 recorded_with: VCR 6.1.0
